--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux-thunk": "^2.2.0",
     "reselect": "^4.0.0",
     "sass-loader": "^7.1.0",
+    "serverless": "^1.45.1",
     "style-loader": "^0.23.1",
     "yup": "^0.26.6"
   },
