--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formik": "^1.4.1",
     "formik-effect": "^1.2.0",
     "history": "^4.6.3",
+    "image-webpack-loader": "^5.0.0",
     "jquery": "^1.9.1",
     "jwt-decode": "^2.2.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -49,6 +50,7 @@
     "sass-loader": "^7.1.0",
     "serverless": "^1.45.1",
     "style-loader": "^0.23.1",
+    "xml-loader": "^1.2.1",
     "yup": "^0.26.6"
   },
   "devDependencies": {
@@ -69,6 +71,7 @@
     "serverless-s3-sync": "^1.7.2",
     "serverless-webpack": "^5.2.0",
     "svg-inline-loader": "^0.8.0",
+    "url-loader": "^2.0.1",
     "webpack": "^4.0.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.0.0",
